<resources>
    <string name="app_name">Exam Registration</string>
    <string name="reg">Register for Exam</string>
    <string name="details">View Candidate Details</string>
    <string name="rollno">Roll No:</string>
    <string name="name">Name:</string>
    <string name='submit'>Submit</string>
    <string name="rollNoHint">Enter your roll no. for details</string>
    <string name="email">Email:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>