<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HomeFragmentBinding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.27" />

        <Button
            android:id="@+id/detailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regButton"
            app:layout_constraintVertical_bias="0.541" />

        <EditText
            android:id="@+id/givenRoll"
            android:layout_width="251dp"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/rollNoHint"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/detailsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regButton"
            app:layout_constraintVertical_bias="0.88" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>